# tsuki

./: :w  ;  Cargo.toml  README.md  factorial.tsuki  factorial.wat  output.wasm  output.wat  test.js  test.wasm  test.wat
.github/workflows/: test.yml
examples/: basic.tsuki  comment.tsuki  demo.tsuki  grain_inspired
src/: anf_tree.rs  ast.rs  call.rs  cli.rs  error.rs  expr.rs  extra.rs  field_map.rs  lexer.rs  lib.rs  main.rs  parser.rs  pattern.rs  token.rs  type_.rs  type_annotation.rs  typechecker.rs  utils.rs  walrus_backend.rs
