[package]
name = "tsuki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.3"
miette = "5.10.0"
thiserror = "1.0.51"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
indoc = "2.0.1"
ordinal = "0.3.2"
vec1 = "1.12.0"



[dev-dependencies]
pretty_assertions = "1.4.0"
